Cleanup code, logging formats for AllFieldMetadataHelper. Wrap scanner in try-with-resources blocks